[add]audio only

--- a/app/views/chats/form.html.erb
+++ b/app/views/chats/form.html.erb
@@ -1,5 +1,4 @@
 <%= form_with(model: @chat, url: "form_submitted", local: true) do |f| %>
-    <%= f.file_field(:mp3_file) %>
-    <%# <%= f.file_field(:mp3_file, accept: 'audio/mp3') %> %>
+    <%= f.file_field(:mp3_file, accept: 'audio/aac, audio/mp4, audio/mpeg, audio/ogg, audio/wav, audio/webm') %>
     <%= f.submit %>
 <% end %>
