--- a/app/views/chats/form.html.erb
+++ b/app/views/chats/form.html.erb
@@ -2,7 +2,7 @@
   音声ファイルをアップロードしてください。
 </div>
 
-<%= form_with(model: @chat, url: "form_submitted", local: true) do |f| %>
+<%= form_with(model: @chat, url: submitted_path, local: true) do |f| %>
   <%= f.file_field(:mp3_file, accept: 'audio/aac, audio/mp4, audio/mpeg, audio/ogg, audio/wav, audio/webm') %>
   <%= f.submit %>
 <% end %>
